Redesenha login com logo real, adiciona PWA instalavel, dashboards de vendas e busca de clientes
- Tela de login: substitui titulo em texto pela logo oficial, cores de fundo
  e botao alinhadas a marca
- PWA: manifest, service worker, icones proprios e banner de instalacao
  ("Instalar app?") com cooldown de 7 dias apos recusa
- Cadastro de cliente: cidade/UF por selecao (lista oficial do IBGE) em vez
  de texto livre, mascara de telefone (DD) 9XXXX-XXXX
- Tela inicial: remove atalhos de navegacao (ficam so no menu), adiciona
  dashboards de vendas diarias (por mes) e mensais, com filtro de vendedor
  restrito ao administrador
- Nova venda: busca de cliente por nome ou telefone, com cidade no resultado
- Backend: endpoints de agregacao de vendas por dia/mes (America/Cuiaba),
  CORS aceita multiplas origens

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>